--- a/tooplate-gymso-style.css
+++ b/tooplate-gymso-style.css
@@ -8,7 +8,7 @@ https://www.tooplate.com/view/2119-gymso-fitness
 /* skills designs */
  {box-sizing: border-box}
 
-.container {
+.container1 {
   width: 100%;
   background-color: #ddd;
 }
